# alica-agent-dummy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: agent.h  callbacks.h
src/: agent.cpp  main.cpp
